# daffy

./: .gitignore  .gitmodules  .travis.yml  ConsoleClient.hs  Makefile  Shakefile  Shakefile.hs  SocketServer.hs  cabal.project  cabal.project.freeze  daffy.cabal  elm-package.json  package.yaml  stack.yaml
app/: Main.hs  SocketServer.hs
daffy-client/src/: Main.elm
daffy-client/src/Daffy/: Basics.elm  ElapsedTimeGCStats.elm  Extent.elm  Html.elm  Lenses.elm  Lenses.elm.stub  Model.elm  RunSpec.elm  Scatterplot.elm  Setters.elm.stub  Svg.elm
daffy-client/src/Daffy/List/: Extra.elm
daffy-client/src/Daffy/Proto/: RunReq.elm
daffy-elm-codegen/: LICENSE  daffy-elm-codegen.cabal
daffy-elm-codegen/app/: Main.hs
daffy-elm-codegen/src/: ElmCodegen.hs
daffy-server/: daffy.cabal
daffy-server/app/: Main.hs
daffy-server/src/Daffy/: Command.hs  Eventlog.hs  Exception.hs  Info.hs  Profile.hs  Stats.hs  Supervisor.hs
daffy-server/src/Daffy/Proto/: ErrorResp.hs  EventResp.hs  ExitCodeResp.hs  FlamegraphResp.hs  OutputResp.hs  Response.hs  RunReq.hs  StatsResp.hs
daffy-server/src/Daffy/Stats/: Internal.hs
daffy-server/src/daffy-prelude/: Prelude.hs
daffy-server/static/: index.html
daffy-server/test/: Spec.hs
daffy-server/test/files/eventlog/: 1.txt
daffy-server/test/files/prof/: 1.txt
daffy-shakefile/: Shakefile.hs  daffy-shakefile.cabal
elm/: Main.elm
generate-elm-lenses/: generate-elm-lenses.sh
generate-elm-setters/: generate-elm-setters.sh
generate-elm-types/: generate-elm-types.cabal
generate-elm-types/app/: Main.hs
generate-elm-types/src/Daffy/Stats/: Internal.hs
snips/: edit-distance.hs  fractals.hs
src/: Daffy.hs
src/Daffy/: Command.hs  Eventlog.hs  Exception.hs  Info.hs  Prelude.hs  Process.hs  Stats.hs  Supervisor.hs
src/daffy-prelude/: Prelude.hs
test/: Spec.hs
test/files/: 1.txt  2.txt
