name: daffy
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      aeson
    , attoparsec
    , base-noprelude
    , bytestring
    , daffy-prelude
    , typed-process
    , text
  exposed-modules:
    Daffy.Exception
    Daffy.Info
    Daffy.Stats
  default-extensions:
    DeriveGeneric
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    PartialTypeSignatures
    ScopedTypeVariables
    RecordWildCards
  default-language: Haskell2010

library daffy-prelude
  hs-source-dirs: src/daffy-prelude
  default-extensions:
    PackageImports
  build-depends:
      base
    , bytestring
    , safe-exceptions
    , stm
    , text
  exposed-modules: Prelude
  default-language: Haskell2010

executable daffy
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded
  build-depends:
      aeson
    , base-noprelude
    , daffy
    , daffy-prelude
    , websockets
  default-extensions:
    DeriveGeneric
    NamedFieldPuns
    ScopedTypeVariables
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
      base-noprelude
    , bytestring
    , daffy
    , daffy-prelude
    , directory
    , hspec
    , temporary
    , text
    , typed-process
  default-extensions:
    ScopedTypeVariables
  default-language: Haskell2010
