name: daffy
version: 0.0.0
category: Profiling
synopsis: Haskell profiling UI
description:
  daffy is a woefully incomplete WebSockets-based UI for profiling Haskell
  programs
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/daffy
bug-reports: https://github.com/mitchellwrosen/daffy/issues
copyright: Copyright (C) 2017 Mitchell Rosen
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: 1.23
tested-with: GHC == 8.0.1
           , GHC == 8.0.2
           , GHC == 8.2.1
           , GHC == 8.2.2
           , GHC == 8.4.1
extra-source-files:
  .travis.yml
  cabal.project
  stack.yaml
  LICENSE
  test/files/stats/*.txt

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/daffy.git

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      aeson
    , attoparsec
    , base-noprelude
    , bytestring
    , daffy-prelude
    , ghc-events
    , streaming
    , streaming-bytestring
    , typed-process
    , text
  exposed-modules:
    Daffy.Eventlog
    Daffy.Exception
    Daffy.Info
    Daffy.Stats
  default-extensions:
    DeriveGeneric
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    PartialTypeSignatures
    ScopedTypeVariables
    RecordWildCards
  default-language: Haskell2010

library daffy-prelude
  hs-source-dirs: src/daffy-prelude
  default-extensions:
    PackageImports
  build-depends:
      base >= 4.9 && < 4.11
    , bytestring
    , managed
    , safe-exceptions
    , stm
    , streaming-bytestring
    , text
  exposed-modules: Prelude
  default-language: Haskell2010

executable daffy
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base-noprelude
    , daffy
    , daffy-prelude
    , websockets
  default-extensions:
    DeriveGeneric
    NamedFieldPuns
    ScopedTypeVariables
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -Wall
  build-depends:
      base-noprelude
    , bytestring
    , daffy
    , daffy-prelude
    , directory
    , hspec
    , temporary
    , text
    , typed-process
  default-extensions:
    ScopedTypeVariables
  default-language: Haskell2010
