name: daffy
version: 0.0.0
category: Profiling
synopsis: Haskell profiling UI
description:
  daffy is a woefully incomplete WebSockets-based UI for profiling Haskell
  programs
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/daffy
bug-reports: https://github.com/mitchellwrosen/daffy/issues
copyright: Copyright (C) 2017 Mitchell Rosen
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: 1.23
extra-source-files:
  LICENSE
  test/files/prof/*.txt
  test/files/stats/*.txt
data-files:
  codegen/daffy.js
  static/index.html
  submodules/FlameGraph/flamegraph.pl
tested-with: GHC == 8.0.1
           , GHC == 8.0.2
           , GHC == 8.2.1
           , GHC == 8.2.2
           , GHC == 8.4.1

flag development
  default: False

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/daffy.git

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      aeson
    , attoparsec
    , base-noprelude
    , bytestring
    , containers
    , daffy-prelude
    , ghc-events >= 0.7.1 && < 0.8
    , ghc-prim
    , streaming
    , streaming-bytestring
    , text
    , typed-process
    , vector
  if os(linux)
    build-depends: hinotify
  exposed-modules:
    Daffy.Exception
    Daffy.Info
    Daffy.Profile
    Daffy.Proto.ErrorResp
    Daffy.Proto.ExitCodeResp
    Daffy.Proto.FlamegraphResp
    Daffy.Proto.OutputResp
    Daffy.Proto.Response
    Daffy.Proto.RunReq
    Daffy.Stats
    Daffy.Supervisor
  if os(linux)
    exposed-modules:
      Daffy.Eventlog
  default-extensions:
    DataKinds
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PartialTypeSignatures
    ScopedTypeVariables
    RecordWildCards
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
  default-language: Haskell2010

library daffy-prelude
  hs-source-dirs: src/daffy-prelude
  default-extensions:
    PackageImports
  build-depends:
      async
    , base >= 4.9 && < 4.11
    , bytestring
    , containers
    , managed
    , stm
    , streaming-bytestring
    , text
    , unliftio
    , vector
  exposed-modules: Prelude
  default-language: Haskell2010

executable daffy
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Paths_daffy
  autogen-modules:
    Paths_daffy
  ghc-options: -threaded -Wall
  build-depends:
      aeson
    , base-noprelude
    , bytestring
    , directory
    , daffy
    , daffy-prelude
    , filepath
    , ghc-events >= 0.7.1 && < 0.8
    , http-types
    , reflection
    , streaming
    , template-haskell
    , text
    , time
    , typed-process
    , websockets
    , wai
    , wai-websockets
    , warp
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    ViewPatterns
  default-language: Haskell2010
  if os(linux)
    cpp-options: -DINOTIFY
  if flag(development)
    cpp-options: -DDEVELOPMENT

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -Wall
  build-depends:
      base-noprelude
    , bytestring
    , daffy
    , daffy-prelude
    , directory
    , hspec
    , streaming
    , temporary
    , text
    , typed-process
  default-extensions:
    ScopedTypeVariables
  default-language: Haskell2010
