name: daffy-shakefile
version: 0
build-type: Simple
cabal-version: >= 1.2

executable Shakefile
  hs-source-dirs: .
  main-is: Shakefile.hs
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-I0 -qb -qg"
  build-depends:
      aeson
    , base
    , containers
    , directory
    , fsnotify
    , shake >= 0.16.1
    , text
    , unix
    , unliftio
    , unordered-containers
