name: generate-elm-types
version: 0.0.0
category: Codegen
synopsis: Elm codegen
description:
  Generate Elm code from Haskell types
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/daffy
bug-reports: https://github.com/mitchellwrosen/daffy/issues
copyright: Copyright (C) 2017 Mitchell Rosen
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: 1.23
tested-with: GHC == 8.0.1
           , GHC == 8.0.2
           , GHC == 8.2.1
           , GHC == 8.2.2
           , GHC == 8.4.1
extra-source-files:
  LICENSE

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/daffy.git

library
  hs-source-dirs: src
  build-depends:
      base >= 4.9 && < 4.11
    , generics-sop >= 0.2
    , text
  exposed-modules: ElmCodegen
  default-language: Haskell2010

executable generate-elm-types
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall
  build-depends:
      base
    , daffy
    , generate-elm-types
    , generics-sop >= 0.2
  default-language: Haskell2010
